--- a/Récupération des données.ipynb
+++ b/Récupération des données.ipynb
@@ -9,7 +9,8 @@
     "La récupération des données à partir d'une API (Interface de Programmation d'Applications) est un processus clé dans l'interaction entre différentes applications ou services. Cette méthode permet d'accéder directement à des informations actualisées et fiables, en automatisant leur collecte grâce à des requêtes programmatiques.\n",
     "Dans le cadre de ce projet, les données météorologiques ont été récupérées via l'API de Météo-France qui permet d'intégrer des données telles que les prévisions, les observations, les alertes.\n",
     "\n",
-    "Pour Débuter, nous récupérons la liste de toutes les stations météos disponibles. Une station météo permet mesurer et enregistrer divers paramètres atmosphériques afin de fournir des informations sur les conditions météorologiques locales."
+    "Pour Débuter, nous récupérons la liste de toutes les stations météos disponibles. \n",
+    "Une station météo permet mesurer et enregistrer divers paramètres atmosphériques afin de fournir des informations sur les conditions météorologiques locales."
    ]
   },
   {
