Mise_en_forme_du_fichier_stat_des

--- a/Récupération des données.ipynb
+++ b/Récupération des données.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
+    "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\"> Récupération des données avec API </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Récupération des données avec l'API Meteo France\n",
     "\n",
     "La récupération des données à partir d'une API (Interface de Programmation d'Applications) est un processus clé dans l'interaction entre différentes applications ou services. Cette méthode permet d'accéder directement à des informations actualisées et fiables, en automatisant leur collecte grâce à des requêtes programmatiques.\n",
