changement_mise_en_forme_Rapport

--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -198,6 +198,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color:rgb(255, 255, 255);font-family: 'Times New Roman', serif;\">\n",
+    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">I) Récupération de la base</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color:rgb(255, 255, 255); font-family: 'Comic Sans MS', cursive;\">\n",
+    "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">A) Procédure de récupération des données et cartographie des stations</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1) Récupération des données\n",
     "\n",
     "**La récupération des données météorologiques a constitué une étape clé de notre projet, mobilisant des compétences techniques pointues pour surmonter les contraintes imposées par l’API de Météo-France et garantir une collecte exhaustive et exploitable des informations.**\n",
@@ -295,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Arial', serif;\">\n",
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
     "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">B) Présentation de la base</h2>"
    ]
   },
@@ -545,20 +561,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
-    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">II) Analyse exploratoire et statistiques descriptives</h1>\n",
-    "\n",
-    "\n",
-    "\n",
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Arial', serif;\">\n",
-    "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">A) Analyse exploratoire et nettoyage des données</h2>"
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Times New Roman', serif;\">\n",
+    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">II) Analyse exploratoire et statistiques descriptives</h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
+    "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">A) Analyse exploratoire et nettoyage des données</h2>\n",
     "                        "
    ]
   },
@@ -567,7 +579,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Arial', serif;\">\n",
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
     "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">B) Statistiques descriptives</h2>"
    ]
   },
@@ -575,10 +587,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
-    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">III) Travail préliminaire et modélisation</h1>\n",
-    "\n",
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Arial', serif;\">\n",
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Times New Roman', serif;\">\n",
+    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">III) Travail préliminaire et modélisation</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
     "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">A) Modélisation en utilisant les séries temporelles </h2>"
    ]
   },
@@ -586,24 +603,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Arial', serif;\">\n",
-    "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\"> B) Modélisation en utilisant le réseau de neurones </h2>"
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
+    "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">B) Modélisation en utilisant le réseau de neurones </h2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Arial', serif;\">\n",
-    "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\"> C) Modélisation en utilisant la regression linéaire </h2>"
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
+    "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\">C) Modélisation en utilisant la regression linéaire </h2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Arial', serif;\">\n",
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; font-family: 'Comic Sans MS', cursive;\">\n",
     "    <h2 style=\"text-align; color: black; font-size: 20px; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px;\"> D) Modélisation en utilisant Random Forest </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
+    "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\"> Conclusion </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
+    "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\"> Limites et perspectives </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
+    "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\"> Reférences </h2>"
    ]
   }
  ],
