mise_en_forme_tableau_dans_Rapport

--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -409,7 +409,7 @@
     "        </tr>\n",
     "        <tr>\n",
     "            <td>DHUMEC</td>\n",
-    "            <td>Durée d’humidité critique (périodes favorables à certaines conditions climatiques spécifiques, ex. moisissures).</td>\n",
+    "            <td>Durée d’humidité critique.</td>\n",
     "        </tr>\n",
     "        <tr><td>TN</td><td>Température minimale (°C).</td></tr>\n",
     "        <tr><td>HTN</td><td>Heure à laquelle la température minimale a été observée.</td></tr>\n",
