Création de requirements.txt, corrections dans LCENSE, requirements.ipynb et README

--- a/requirements.ipynb
+++ b/requirements.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
     "]\n",
     "\n",
     "# Ouvrir le fichier LICENSE en mode écriture\n",
-    "with open('LICENSE', 'w') as file:\n",
+    "with open('requirements.txt', 'w') as file:\n",
     "    # Définir la largeur du fichier\n",
     "    largeur_fichier = 100\n",
     "\n",
