Dernière modification dans le main

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -10,63 +10,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting nbformat\n",
-      "  Downloading nbformat-5.10.4-py3-none-any.whl.metadata (3.6 kB)\n",
-      "Collecting fastjsonschema>=2.15 (from nbformat)\n",
-      "  Downloading fastjsonschema-2.21.1-py3-none-any.whl.metadata (2.2 kB)\n",
-      "Collecting jsonschema>=2.6 (from nbformat)\n",
-      "  Downloading jsonschema-4.23.0-py3-none-any.whl.metadata (7.9 kB)\n",
+      "Requirement already satisfied: nbformat in /opt/conda/lib/python3.12/site-packages (5.10.4)\n",
+      "Requirement already satisfied: fastjsonschema>=2.15 in /opt/conda/lib/python3.12/site-packages (from nbformat) (2.21.1)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in /opt/conda/lib/python3.12/site-packages (from nbformat) (4.23.0)\n",
       "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /opt/conda/lib/python3.12/site-packages (from nbformat) (5.7.2)\n",
       "Requirement already satisfied: traitlets>=5.1 in /opt/conda/lib/python3.12/site-packages (from nbformat) (5.14.3)\n",
       "Requirement already satisfied: attrs>=22.2.0 in /opt/conda/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat) (24.3.0)\n",
-      "Collecting jsonschema-specifications>=2023.03.6 (from jsonschema>=2.6->nbformat)\n",
-      "  Downloading jsonschema_specifications-2024.10.1-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting referencing>=0.28.4 (from jsonschema>=2.6->nbformat)\n",
-      "  Downloading referencing-0.35.1-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting rpds-py>=0.7.1 (from jsonschema>=2.6->nbformat)\n",
-      "  Downloading rpds_py-0.22.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.2 kB)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /opt/conda/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat) (2024.10.1)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in /opt/conda/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat) (0.35.1)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in /opt/conda/lib/python3.12/site-packages (from jsonschema>=2.6->nbformat) (0.22.3)\n",
       "Requirement already satisfied: platformdirs>=2.5 in /opt/conda/lib/python3.12/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n",
-      "Downloading nbformat-5.10.4-py3-none-any.whl (78 kB)\n",
-      "Downloading fastjsonschema-2.21.1-py3-none-any.whl (23 kB)\n",
-      "Downloading jsonschema-4.23.0-py3-none-any.whl (88 kB)\n",
-      "Downloading jsonschema_specifications-2024.10.1-py3-none-any.whl (18 kB)\n",
-      "Downloading referencing-0.35.1-py3-none-any.whl (26 kB)\n",
-      "Downloading rpds_py-0.22.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (385 kB)\n",
-      "Installing collected packages: fastjsonschema, rpds-py, referencing, jsonschema-specifications, jsonschema, nbformat\n",
-      "Successfully installed fastjsonschema-2.21.1 jsonschema-4.23.0 jsonschema-specifications-2024.10.1 nbformat-5.10.4 referencing-0.35.1 rpds-py-0.22.3\n",
-      "Collecting nbconvert\n",
-      "  Downloading nbconvert-7.16.4-py3-none-any.whl.metadata (8.5 kB)\n",
+      "Requirement already satisfied: nbconvert in /opt/conda/lib/python3.12/site-packages (7.16.4)\n",
       "Requirement already satisfied: beautifulsoup4 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (4.12.3)\n",
-      "Collecting bleach!=5.0.0 (from nbconvert)\n",
-      "  Downloading bleach-6.2.0-py3-none-any.whl.metadata (30 kB)\n",
-      "Collecting defusedxml (from nbconvert)\n",
-      "  Downloading defusedxml-0.7.1-py2.py3-none-any.whl.metadata (32 kB)\n",
+      "Requirement already satisfied: bleach!=5.0.0 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (6.2.0)\n",
+      "Requirement already satisfied: defusedxml in /opt/conda/lib/python3.12/site-packages (from nbconvert) (0.7.1)\n",
       "Requirement already satisfied: jinja2>=3.0 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (3.1.5)\n",
       "Requirement already satisfied: jupyter-core>=4.7 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (5.7.2)\n",
-      "Collecting jupyterlab-pygments (from nbconvert)\n",
-      "  Downloading jupyterlab_pygments-0.3.0-py3-none-any.whl.metadata (4.4 kB)\n",
+      "Requirement already satisfied: jupyterlab-pygments in /opt/conda/lib/python3.12/site-packages (from nbconvert) (0.3.0)\n",
       "Requirement already satisfied: markupsafe>=2.0 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (3.0.2)\n",
-      "Collecting mistune<4,>=2.0.3 (from nbconvert)\n",
-      "  Downloading mistune-3.0.2-py3-none-any.whl.metadata (1.7 kB)\n",
-      "Collecting nbclient>=0.5.0 (from nbconvert)\n",
-      "  Downloading nbclient-0.10.2-py3-none-any.whl.metadata (8.3 kB)\n",
+      "Requirement already satisfied: mistune<4,>=2.0.3 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (3.0.2)\n",
+      "Requirement already satisfied: nbclient>=0.5.0 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (0.10.2)\n",
       "Requirement already satisfied: nbformat>=5.7 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (5.10.4)\n",
       "Requirement already satisfied: packaging in /opt/conda/lib/python3.12/site-packages (from nbconvert) (24.2)\n",
-      "Collecting pandocfilters>=1.4.1 (from nbconvert)\n",
-      "  Downloading pandocfilters-1.5.1-py2.py3-none-any.whl.metadata (9.0 kB)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (1.5.1)\n",
       "Requirement already satisfied: pygments>=2.4.1 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (2.18.0)\n",
-      "Collecting tinycss2 (from nbconvert)\n",
-      "  Downloading tinycss2-1.4.0-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: tinycss2 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (1.4.0)\n",
       "Requirement already satisfied: traitlets>=5.1 in /opt/conda/lib/python3.12/site-packages (from nbconvert) (5.14.3)\n",
-      "Collecting webencodings (from bleach!=5.0.0->nbconvert)\n",
-      "  Downloading webencodings-0.5.1-py2.py3-none-any.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: webencodings in /opt/conda/lib/python3.12/site-packages (from bleach!=5.0.0->nbconvert) (0.5.1)\n",
       "Requirement already satisfied: platformdirs>=2.5 in /opt/conda/lib/python3.12/site-packages (from jupyter-core>=4.7->nbconvert) (4.3.6)\n",
       "Requirement already satisfied: jupyter-client>=6.1.12 in /opt/conda/lib/python3.12/site-packages (from nbclient>=0.5.0->nbconvert) (8.6.3)\n",
       "Requirement already satisfied: fastjsonschema>=2.15 in /opt/conda/lib/python3.12/site-packages (from nbformat>=5.7->nbconvert) (2.21.1)\n",
@@ -80,22 +57,7 @@
       "Requirement already satisfied: pyzmq>=23.0 in /opt/conda/lib/python3.12/site-packages (from jupyter-client>=6.1.12->nbclient>=0.5.0->nbconvert) (26.2.0)\n",
       "Requirement already satisfied: tornado>=6.2 in /opt/conda/lib/python3.12/site-packages (from jupyter-client>=6.1.12->nbclient>=0.5.0->nbconvert) (6.4.2)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->jupyter-client>=6.1.12->nbclient>=0.5.0->nbconvert) (1.17.0)\n",
-      "Downloading nbconvert-7.16.4-py3-none-any.whl (257 kB)\n",
-      "Downloading bleach-6.2.0-py3-none-any.whl (163 kB)\n",
-      "Downloading mistune-3.0.2-py3-none-any.whl (47 kB)\n",
-      "Downloading nbclient-0.10.2-py3-none-any.whl (25 kB)\n",
-      "Downloading pandocfilters-1.5.1-py2.py3-none-any.whl (8.7 kB)\n",
-      "Downloading defusedxml-0.7.1-py2.py3-none-any.whl (25 kB)\n",
-      "Downloading jupyterlab_pygments-0.3.0-py3-none-any.whl (15 kB)\n",
-      "Downloading tinycss2-1.4.0-py3-none-any.whl (26 kB)\n",
-      "Downloading webencodings-0.5.1-py2.py3-none-any.whl (11 kB)\n",
-      "Installing collected packages: webencodings, tinycss2, pandocfilters, mistune, jupyterlab-pygments, defusedxml, bleach, nbclient, nbconvert\n",
-      "Successfully installed bleach-6.2.0 defusedxml-0.7.1 jupyterlab-pygments-0.3.0 mistune-3.0.2 nbclient-0.10.2 nbconvert-7.16.4 pandocfilters-1.5.1 tinycss2-1.4.0 webencodings-0.5.1\n",
-      "Collecting graphviz\n",
-      "  Downloading graphviz-0.20.3-py3-none-any.whl.metadata (12 kB)\n",
-      "Downloading graphviz-0.20.3-py3-none-any.whl (47 kB)\n",
-      "Installing collected packages: graphviz\n",
-      "Successfully installed graphviz-0.20.3\n"
+      "Requirement already satisfied: graphviz in /opt/conda/lib/python3.12/site-packages (0.20.3)\n"
      ]
     }
    ],
@@ -109,7 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'objectif de ce fichier est de pouvoir compiler tous les fichiers de notre projet."
+    "L'objectif de ce fichier est de pouvoir compiler tous les fichiers de notre projet.\n",
+    "\n",
+    "L'execution de ce fichier prend environ 13min."
    ]
   },
   {
@@ -121,35 +85,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-28 16:05:42.756272: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-12-28 16:05:42.760108: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-12-28 16:05:42.771483: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-28 21:23:54.496260: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-12-28 21:23:54.500818: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-12-28 21:23:54.513020: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1735401942.790108  102616 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1735401942.795578  102616 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-28 16:05:42.815407: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1735421034.533309   84618 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1735421034.539510   84618 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-28 21:23:54.562706: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-12-28 16:06:15.834576: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:152] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "2024-12-28 21:33:02.555199: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-12-28 21:33:02.561946: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-12-28 21:33:02.575183: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1735421582.595974   85803 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1735421582.609315   85803 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-28 21:33:02.637637: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-12-28 21:33:40.355741: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-12-28 21:33:40.360142: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-12-28 21:33:40.371847: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1735421620.391397   86097 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1735421620.397194   86097 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-28 21:33:40.418421: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-12-28 21:34:13.030092: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:152] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     }
    ],
    "source": [
     "#Compilation du main\n",
-    "import nbformat\n",
-    "from nbconvert.preprocessors import ExecutePreprocessor\n",
+    "import fonctions as fonc\n",
     "\n",
     "\n",
     "# Fonction pour exécuter un notebook\n",
     "def run_notebook(notebook_path):\n",
     "    with open(notebook_path) as f:\n",
-    "        nb = nbformat.read(f, as_version=4)\n",
-    "        ep = ExecutePreprocessor(timeout=600, kernel_name='python3')\n",
+    "        nb = fonc.nbformat.read(f, as_version=4)\n",
+    "        ep = fonc.ExecutePreprocessor(timeout=600, kernel_name='python3')\n",
     "        ep.preprocess(nb, {'metadata': {'path': './'}})\n",
     "\n",
     "# Exécution des autres notebooks\n",
     "run_notebook('Récupération des données.ipynb')\n",
     "run_notebook('Analyse_Exploratoire&Statistiques_descriptives.ipynb')\n",
-    "run_notebook('Modélisation_finale.ipynb')\n"
+    "run_notebook('Modélisation_finale.ipynb')\n",
+    "run_notebook('Rapport_final.ipynb')\n",
+    "run_notebook('requirements.ipynb')"
    ]
   }
  ],
